[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "forcecheck"
version = "1.0.0"
description = "Distributed ping via check-host.net and BGP lookup via lg.sdv.fr"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
deps = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
]

[project.scripts]
"ping!"   = "forcecheck.ping:main"
"bgp!"    = "forcecheck.bgp:main"
"trace!"  = "forcecheck.trace:main"
"http!"   = "forcecheck.http:main"
"whois!"    = "forcecheck.whois:main"
"checkall!" = "forcecheck.checkall:main"
"fc!"       = "forcecheck.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/ForceCheck"
