[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forcecheck"
version = "1.0.5"
description = "Distributed network diagnostics from the world's eyes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
]

[project.scripts]
# Brand commands (work on Linux/macOS and modern Windows shells)
"ping!"      = "forcecheck.ping:main"
"bgp!"       = "forcecheck.bgp:main"
"trace!"     = "forcecheck.trace:main"
"http!"      = "forcecheck.http:main"
"whois!"     = "forcecheck.whois:main"
"checkall!"  = "forcecheck.checkall:main"
"fcheck"     = "forcecheck.cli:main"
# Bang-free aliases — reliable everywhere, handy on Windows where "!"
# can be awkward to type in some shells.
"fcping"     = "forcecheck.ping:main"
"fcbgp"      = "forcecheck.bgp:main"
"fctrace"    = "forcecheck.trace:main"
"fchttp"     = "forcecheck.http:main"
"fcwhois"    = "forcecheck.whois:main"
"fccheckall" = "forcecheck.checkall:main"

[project.urls]
Homepage = "https://github.com/AlrForce/ForceCheck"

[tool.setuptools]
package-dir = {"forcecheck" = "."}
packages = ["forcecheck"]
