[build-system]
requires = ["setuptools>=43"]
build-backend = "setuptools.build_meta"

[project]
name = "forcecheck"
version = "1.93"
description = "Distributed network diagnostics from the world's eyes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
deps = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
]

[project.urls]
Homepage = "https://github.com/AlrForce/ForceCheck"

[tool.setuptools]
package-dir = {"forcecheck" = "."}
packages = ["forcecheck"]
